# Computer-Graphics

./: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  CircleDrawerMidpoint.cpp  CircleDrawerMidpoint.h  CircleDrawerModifiedMidpoint.cpp  CircleDrawerModifiedMidpoint.h  Drawer.h  Ellipse.cpp  Ellipse.h  File.cpp  File.h  Line.cpp  Line.h  Point.cpp  Point.h  README.md  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Utility.h  main.cpp
Drawers/: Drawer.cpp  Drawer.h
Drawers/CircleAlgorithms/: CircleDrawerDirect.cpp  CircleDrawerDirect.h  CircleDrawerIterativePolar.cpp  CircleDrawerIterativePolar.h  CircleDrawerMidpoint.cpp  CircleDrawerMidpoint.h  CircleDrawerModifiedMidpoint.cpp  CircleDrawerModifiedMidpoint.h  CircleDrawerPolar.cpp  CircleDrawerPolar.h  CricleDrawerIterativePolar.cpp  CricleDrawerIterativePolar.h
Drawers/ClippingCircleAlgorithms/: ClippingCircleLine.cpp  ClippingCircleLine.h  ClippingCirclePoint.cpp  ClippingCirclePoint.h
Drawers/ClippingRectangleAlgorithms/: ClippingRectangleLine.cpp  ClippingRectangleLine.h  ClippingRectanglePoint.cpp  ClippingRectanglePoint.h  ClippingRectanglePolygon.cpp  ClippingRectanglePolygon.h
Drawers/CurveAlgorithms/: CurveDrawerBezier.cpp  CurveDrawerBezier.h  CurveDrawerHermite.cpp  CurveDrawerHermite.h
Shapes/: Circle.cpp  Circle.h  Container.cpp  Container.h  Curve.cpp  Curve.h  ELLIPSE.cpp  ELLIPSE.h  Ellipse.cpp  Ellipse.h  Flood.cpp  Flood.h  Line.cpp  Line.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h
(+40 files in other folders)
